--- a/aula 4/index.html
+++ b/aula 4/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="pr-br">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokemon APi</title>
+    <title>Pokemon API - parte 02</title>
 </head>
 <body>
+    
     <script src="script.js"></script>
 </body>
 </html>
